app/assets/stylesheets/chat-ui-popup.scss
@import "transcript-agent";
@import "transcript-customer";
@import "system-message";
@import "c2cbutton";
@import "end-chat-popup";
@import "lib/govuk-frontend/dist/govuk/base";
@import 'chat-ui-common';

$popup-width: 400px;
$popup-min-width: 272px;
$popup-max-height: 590px;
$popup-container-border-width: 4px;
$header-height: 57px;
$tools-height: 23px;
$tools-padding-y: 5px;
$header-bottom-border-height: 2px;
$components-sub-height: $header-height + $header-bottom-border-height + $tools-height + 2 * $tools-padding-y;
$footer-height: 62px;
$footer-padding: 5px;
$textarea-height: $footer-height;
$transcript-border-height: 2px;
$transcript-sub-height: $footer-height + 2 * $footer-padding + 2 * ($transcript-border-height * 2) + 2px;
$page-height: calc(100% - 5px);



#ciapiSkin {
    font-family: "GDS Transport", arial, sans-serif;
    font-size: 19px;
    -webkit-font-smoothing: antialiased;


    #ciapiSkinMinimised {
        display: none;
    }
}

#ciapiSkin.minimised {
     #ciapiSkinContainer {
        display: none;
    }
    #ciapiSkinMinimised {
        display: block;
    }
}

#ciapiSkinContainer {
    border: $popup-container-border-width solid;
    position: fixed;
    bottom: 0;
    right: 0;
    display: flex;
    flex-direction: column;
}

@media print {
    #ciapiSkinContainer {
        position: relative;
        border: none;
        width: 100%;
    }
}

.ciapiSkinContainerStandardSize {
    max-height: 40rem;
    height: 100%;
    min-width: 20rem;
    width: 29rem;
}

.ciapiSkinContainerLargerSize {
    max-height: 57rem;
    height: 100%;
    width: 36em;
    min-width: 30rem;
}

#titleBar {
    width: 100%;
    height: 2.8rem;
    background-color: #0b0c0c;
    display: flex;
    flex-flow: wrap;
    justify-content: space-between;
    flex-direction: row;
    gap: 1rem;
    h2 {
        color: white;
        margin-bottom: 0.3rem;
    }
}

    #ciapiSkinTitleBar {
        padding-top: 0.7rem;
        font-weight: 700;
        display: flex;
        margin-right: 1rem;
    }

#ciapiSkinHeader {
    font-size: 16px;
    border-bottom-width: $header-bottom-border-height;
}

#ciapiSkinHideButton {
    width: 100%;
    height: 100%;
    padding: 8px 13px 13px 0;
    margin: 0;
    background-origin: border-box;
    border: none;
    background-color: transparent;
    color: white;
    cursor: pointer;
    &:hover {
        background-color: #505a5f !important;
    }
}

    #ciapiSkinHideButton:focus:not(:active):not(:hover) {
        border-color: #ffdd00;
        color: #0b0c0c;
        background-color: #ffdd00;
        box-shadow: 0 2px 0 #0b0c0c;
    }

    #ciapiSkinCloseButton:focus {
        background-color: #ffdd00;
        text-decoration: underline;
        color: black;
    }

    #printButton:focus {
        background-color: #ffdd00;
        text-decoration: underline;
        color: black;
    }

    #toggleSound:focus {
        background-color: #ffdd00;
        text-decoration: underline;
        color: black;
    }

    #accessibility-statement-link:focus {
        background-color: #ffdd00;
        text-decoration: underline;
        color: black;
    }

    #ciapiSkinHideButton:focus {
        color: black;
        border-color: #ffdd00;
        outline: 3px solid transparent;
        box-shadow: inset 0 0 0 1px #ffdd00;
        .arrow {
            margin-left: 15px;
            border: solid black;
            border-width: 0 3px 3px 0;
            display: inline-block;
            padding: 6px;
        }
    }

    #toggleSizeButton:focus {
        background-color: #ffdd00;
        text-decoration: underline;
        color: black;
    }

    #ciapiSkinExpandButton {
        .arrow {
            margin: 25px 20px 0 0;
            border: solid white;
            border-width: 0 3px 3px 0;
            display: inline-block;
            padding: 6px;
            float: right;
        }
    }




#ciapiChatComponents {
    height: calc(100% - #{$components-sub-height});
    width: 100%;
}

.ciapiSkinChatTranscript {
    height: 300px;
    overflow: scroll;
    overflow-x: hidden;
    overflow-y: auto;
    padding-right: 14px;
    padding-left: 1em;
    position: relative;

    div {
        margin-bottom: 0px;
        margin-top: 0px;
    }

    .info {
        text-align: center;
        color: #505a5f;
        padding: 15px 5px;
        border-radius: 1.0526315789em;
        border: 0.3157894737em solid #505a5f;
        line-height: 1.4em;
        color: #0b0c0c;
        min-width: 5em;
    }

    .info img {
        width: 1.25em;
        vertical-align: bottom;
        padding: 0 0.5em 0.2em 0;
    }

    .skipToTopWithScroll {
        position: relative;
        bottom: 0;
        margin-left: 5px;
        margin-right: 5px;
        clear: both;
    }

    .skipToTopWithOutScroll {
        position: absolute;
        margin-left: 5px;
        margin-right: 5px;
        width: 90%;
        clear: both;
    }

    #skipToBottom {
        margin-left: 5px;
        margin-right: 5px;
    }
}

@media print {
  .ciapiSkinChatTranscript {
  height: calc(100% - #{$transcript-sub-height});
  }
}

#HMRC_CIAPI_Anchored_1 {
    position: fixed;
    bottom: 0;
    right: 50px;
}

#ciapiSkinFooter {
    padding: 0.5rem 10px;
    margin-bottom: -42px;
}


#ciapiInput {
    width: calc(100% - 100px);
    float: left;

    textarea {
        height: $textarea-height;
        resize: none;
        margin-bottom: 0px;
    }
}

#ciapiSkinHeader {
    padding: 3px 0;
}

#ciapiSend {
    width: 81px;
    height: 40px;
    float: left;
    text-align: right;
}

@media screen and (max-width: 500px) {
    #ciapiInput {
        width: calc(100% - 100px);
        textarea {
            height: 40px;
            resize: none;
            margin-bottom: 0px;
        }
    }
    
    #ciapiSkinFooter {
        padding: 0.1rem 10px;
        margin-bottom: -39px;
        label {
            margin-bottom: 1px;
        }
    } 

    #ciapiSend {
        width: 81px;
    }

    #ciapiSkinSendButton {
        padding: 1px 10px 1px;
        line-height: 1.1275;
        height: 39px;
    }
    
    #postPCSPageWrapper {
        padding: 0.2em 1em 1em 1em !important;
    }

    .govuk-panel {
        padding: 0.1em;
    }

    p, ul {
        margin-block-start: 0.2em;
        margin-block-end: 0.2em;
    }

}

#accessibility-statement {
    float: left;
    padding-bottom: 2px;
    padding-top: 2px;
    height: 19px;
    background-color: #eee;
    font-size: 14px;
    position: absolute;
    bottom: 0px;
    width:100%;

  a {
    padding-left: 5px;
  }
}


#ciapiSkinMinimised {
    width: 100%;
    max-width: $popup-width;
    height: $header-height;
    position: fixed;
    bottom: 0px;
    right: 0px;
    background-color: #0b0c0c;
    #ciapiSkinRestoreButton {
        z-index: 1000;
        width: 100%;
        border: none;
        background-color: transparent;
        cursor: pointer;
        #logo-white {
            float: left;
            padding-left: 0.6em;
            padding-top: 0.3em;
            img {
                margin: 3px 0 0 0;
                height: 42px;
                width: 42px;
            }
        }
        h2 {
            color: white;
            float: left;
            padding-top: 0.8em;
            padding-left: 0.6em;
        }
    }
    #ciapiSkinRestoreButton:focus {
        background-color: #ffdd00;
        h2 {
            color: black;
            text-decoration: underline;
        }
        .arrow {
           margin-left: 15px;
           border: black solid;
           border-width: 0 3px 3px 0;
           display: inline-block;
           padding: 6px;
        }
    }
}

#ciapiSkinMinimised:hover {
    background-color: #505a5f;
}

#postChatSurveyWrapper {
    height: $page-height;
    width: calc(100% - 34px);
    overflow: scroll;
    overflow-x: hidden;
    padding-right: 14px;
    padding-top: 1em;
    padding-left: 1em;
    border-top: 2px solid #b1b4b6;

    fieldset.govuk-fieldset {
        margin-top: 2em;
    }
}

#postPCSPageWrapper {
    height: $page-height;
    border: 0px solid red;
    border-top: 2px solid #b1b4b6;
    padding-right: 14px;
    padding: 1em;
}

@media screen and (max-width: 960px) and (min-width: 768px) {
    #ciapiSkinContainer {
        width: 100%;
        width: 100%;
        max-height: 40rem;
        border: none;
    }
    #toggleSizeButton {
        display: none;
      }
}

@media screen and (max-width: 767px) {
    #ciapiSkinContainer {
        width: 100%;
        height: 85%;
        border: none;
        max-height: 100%;
    }
    #toggleSizeButton {
        display: none;
      }

    #ciapiChatComponents p, #systemMessageBanner  {
        font-size: 16px;
    }

    #ciapiSkinMinimised {
        max-width: 90% !important;
        margin-right: 5%;
    }

    .ciapiSkinChatTranscript:focus {
        box-shadow: 0 0 0 3px #fd0;
        border: solid #000 4px;
        margin-top: -2px;
        margin-bottom: 0px;
        padding-left: 9px;
        margin-left: 3px;
        outline: none;
    }
}

@media screen and (max-width: 640px) {
    #ciapiSkinMinimised {
        h2 {
            padding-top: 1.2em !important;
        }
    }

}

.ciapiSkinChatTranscript a:visited {
  color: #4c2c92;
}

.ciapiSkinChatTranscript a:link {
    color: #1d70b8;
  }

.ciapiSkinChatTranscript a:hover {
    color: #003078;
}

.ciapiSkinChatTranscript a:focus {
    outline: 3px solid transparent;
    color: #0b0c0c;
    background-color: #fd0;
    box-shadow: 0 -2px #fd0, 0 4px #0b0c0c;
    text-decoration: none;
}
#skipToTopLink:focus {
    box-shadow : none !important;
    text-decoration: underline !important;
}

 #skipToBottomLink:focus{
     box-shadow : none !important;
     text-decoration: underline !important;
}

#heading_chat_ended:focus, #legend_give_feedback:focus, #heading_end_chat_popup:focus{
    outline:0;
}

.ciapi-agent-message:has(iframe.video-message) {
    min-width: 50%;
    padding-bottom: 0 !important;
}

@media only screen and (max-width: 768px) {
    .ciapi-agent-message:has(iframe.video-message) {
        min-width: 80%;
    }
}

/* Dropdown Button */
.dropbtn {
    background-color: #0b0c0c;
    color: white;
    padding: 6px 10px;
    font-size: 16px;
    border: none;
    cursor: pointer;
  }
  
  /* Dropdown button on hover & focus */
  .dropbtn:hover {
    background-color: #505a5f;
  }

  .dropbtn:focus {
    background-color: #ffdd00;
    #menuText {
        color: black;
      }
  }
  
  /* The container <div> - needed to position the dropdown content */
  .dropdown {
    position: relative;
    display: inline-block;
  }
  
  /* Dropdown Content (Hidden by Default) */
  .dropdown-content {
    display: none;
    position: absolute;
    background-color: #f1f1f1;
    min-width: 320px;
    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
    z-index: 1;
  }
  
  /* Links inside the dropdown */
  .dropdown-content button {
    color: black;
    padding: 12px 16px;
    text-decoration: none;
    display: block;
    border: none;
    width: 100%;
    text-align: left;
    font-size: 16px;
    background-color: #EFEFEF;
  }
  
  /* Change color of dropdown links on hover */
  .dropdown-content button:hover {
    background-color: #B4DDFF;
    cursor: pointer;
}
  
  /* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
  .show {display:block;}

  .arrow {
    margin-left: 15px;
    border: solid white;
    border-width: 0 3px 3px 0;
    display: inline-block;
    padding: 6px;
  }

  .down {
    transform: rotate(45deg);
    -webkit-transform: rotate(45deg);
  }

  .up {
    transform: rotate(45deg);
    -webkit-transform: rotate(225deg);
}

#menuButton {
    height: 100%;
}

#menuText{
    margin-bottom: 0;
    color: white;
  }

  @media print{
    .popup-print-float-right, .popup-print-float-left {
        padding: 0;
        margin-bottom: 1em;
      }
}

